<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo_imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_marginTop="50dip"/>

    <Button
        android:id="@+id/play_btn"       
        android:background="@drawable/red_menu_btn"
        style="@style/main_menu_btnTop"
        android:text="@string/btnlabel1"/>
    
    <Button
        android:id="@+id/player_data_btn"
        android:background="@drawable/blue_menu_btn"
        style="@style/main_menu_btnNormal"
        android:text="@string/btnlabel2"/>

    <Button
        android:id="@+id/highscore_btn"
        android:background="@drawable/purple_menu_btn"
        style="@style/main_menu_btnNormal"
        android:text="@string/btnlabel3"/>
    
    <Button
        android:id="@+id/options_btn"
        android:background="@drawable/green_menu_btn"
        style="@style/main_menu_btnNormal"
        android:text="@string/btnlabel4"/> 
        
        <Button
        android:id="@+id/btn5"
        android:background="@drawable/yellow_menu_btn"
        style="@style/main_menu_btnNormal"
        android:text="@string/btnlabel5"/> 
        
</LinearLayout>